changes in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, perspiciatis. Nisi accusamus ullam nesciunt nemo obcaecati blanditiis facilis repudiandae vitae ipsam nihil. Laudantium dicta laborum vitae at porro labore amet?</p>
-   
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime unde cupiditate similique, tempore eos tenetur sed vitae ut quod! Aspernatur ex dolore quibusdam quod odio ipsa doloremque, animi repudiandae dolor.</p>
 </body>
 </html>
